--- a/ContactForm/vercel.json
+++ b/ContactForm/vercel.json
@@ -11,8 +11,8 @@
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
     },
     {
       "src": "/favicon.ico",
@@ -31,4 +31,4 @@
       "dest": "/index.html"
     }
   ]
-} 
+}
