--- a/ContactForm/vercel.json
+++ b/ContactForm/vercel.json
@@ -16,7 +16,7 @@
     },
     {
       "src": "/favicon.ico",
-      "dest": "/favicon.ico"
+      "dest": "/vite.svg"
     },
     {
       "src": "/manifest.json",
